# rust_tutorials

./: .gitignore  README.md
books/: 1.Rust语言介绍.typ  5.基本类型之数值类型（value_type）.typ  6.基本类型之字符、布尔、单元、Never类型（char_bool_unit_never）.typ  7.函数.typ  8.所有权（owner）.typ  变量的绑定与解构（variables）.typ  安装Rust.typ  认识Cargo（hello_world）.typ
rust_programs/: Cargo.toml
rust_programs/char_bool_unit_never/: Cargo.toml
rust_programs/char_bool_unit_never/src/: main.rs
rust_programs/function/src/: main.rs
rust_programs/hello_world/: Cargo.toml
rust_programs/hello_world/src/: main.rs
rust_programs/owner/src/: main.rs
rust_programs/value_type/: Cargo.toml
rust_programs/value_type/src/: main.rs
rust_programs/variables/src/: main.rs
