[package]
name = "hello_world"    # 项目名称
version = "0.1.0"       # 项目版本
edition = "2021"        # Rust 版次

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]      # 项目依赖
rand = "0.8.5"      # 大于等于 0.8.5 ，小于 0.9
# rand = { version = "0.8.5" }
# rand = { git = "https://github.com/rust-random/rand" }
# rand = { path = "../rand" }